--- a/Draw/Controller/FriendManage/FriendCell.xib
+++ b/Draw/Controller/FriendManage/FriendCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIView</string>
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 2}, {58, 60}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="150275894"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -61,7 +60,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{2, 4}, {54, 54}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566096567"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -77,7 +75,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{61, 2}, {146, 26}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1002571854"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="290682339">
 									<int key="NSColorSpace">3</int>
@@ -112,9 +109,8 @@
 							<object class="IBUILabel" id="1002571854">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{63, 35}, {34, 20}}</string>
+								<string key="NSFrame">{{61, 35}, {55, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="227378708"/>
 								<reference key="IBUIBackgroundColor" ref="290682339"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -143,9 +139,8 @@
 							<object class="IBUILabel" id="227378708">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{100, 35}, {63, 20}}</string>
+								<string key="NSFrame">{{119, 35}, {63, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="424371828"/>
 								<reference key="IBUIBackgroundColor" ref="290682339"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -171,9 +166,8 @@
 							<object class="IBUIImageView" id="424371828">
 								<reference key="NSNextResponder" ref="1043728466"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{167, 35}, {20, 20}}</string>
+								<string key="NSFrame">{{186, 35}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="853163999"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -183,7 +177,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{222, 18}, {66, 26}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="768365372"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -213,7 +206,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{222, 18}, {66, 26}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="377664735"/>
 								<reference key="IBUIBackgroundColor" ref="290682339"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -242,7 +234,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 65}, {300, 1}}</string>
 								<reference key="NSSuperview" ref="1043728466"/>
-								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC42ODYyNzQ1MDk4IDAuNDg2Mjc0NTA5OCAwLjI2NjY2NjY2NjcAA</bytes>
@@ -252,7 +244,6 @@
 						</array>
 						<string key="NSFrameSize">{300, 65}</string>
 						<reference key="NSSuperview" ref="923471272"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="630427240"/>
 						<reference key="IBUIBackgroundColor" ref="290682339"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -264,7 +255,6 @@
 				</array>
 				<string key="NSFrameSize">{300, 66}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1043728466"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="1043728466"/>
@@ -444,89 +434,12 @@
 			<nil key="sourceID"/>
 			<int key="maxID">24</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FriendCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">clickFollowButton:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">clickFollowButton:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">clickFollowButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="areaLabel">UILabel</string>
-						<string key="authImageView">UIImageView</string>
-						<string key="avatarView">HJManagedImageV</string>
-						<string key="followButton">UIButton</string>
-						<string key="genderLabel">UILabel</string>
-						<string key="nickNameLabel">UILabel</string>
-						<string key="statusLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="areaLabel">
-							<string key="name">areaLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="authImageView">
-							<string key="name">authImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="avatarView">
-							<string key="name">avatarView</string>
-							<string key="candidateClassName">HJManagedImageV</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="followButton">
-							<string key="name">followButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="genderLabel">
-							<string key="name">genderLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nickNameLabel">
-							<string key="name">nickNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="statusLabel">
-							<string key="name">statusLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FriendCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HJManagedImageV</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HJManagedImageV.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1280" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -534,6 +447,6 @@
 			<string key="NS.key.0">user_picbg.png</string>
 			<string key="NS.object.0">{16, 16}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
