--- a/Draw/Controller/Room/RoomCell.xib
+++ b/Draw/Controller/Room/RoomCell.xib
@@ -45,7 +45,7 @@
 							<object class="IBUIImageView" id="753160396">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{6, 7}, {60, 62}}</string>
+								<string key="NSFrame">{{3, 7}, {60, 62}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="427313591"/>
@@ -59,7 +59,7 @@
 							<object class="IBUIView" id="427313591">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{9, 7}, {55, 57}}</string>
+								<string key="NSFrame">{{10, 7}, {55, 57}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="318460792"/>
@@ -78,7 +78,7 @@
 								<string key="NSFrame">{{71, 28}, {140, 25}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="665233394"/>
+								<reference key="NSNextKeyView" ref="21839038"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="785173849">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -106,45 +106,13 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="945254090">
-								<reference key="NSNextResponder" ref="380575889"/>
-								<int key="NSvFlags">-2147483356</int>
-								<string key="NSFrame">{{173, 5}, {64, 21}}</string>
-								<reference key="NSSuperview" ref="380575889"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="64556621"/>
-								<reference key="IBUIBackgroundColor" ref="785173849"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">[已满]</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAwIDAgMC44MQA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="684485103">
-									<int key="type">1</int>
-									<double key="pointSize">14</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="522230833">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">14</double>
-									<int key="NSfFlags">16</int>
-								</object>
-							</object>
 							<object class="IBUILabel" id="21839038">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{72, 10}, {140, 21}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="945254090"/>
+								<reference key="NSNextKeyView" ref="665233394"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -155,8 +123,15 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">8</float>
-								<reference key="IBUIFontDescription" ref="684485103"/>
-								<reference key="IBUIFont" ref="522230833"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">14</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">14</double>
+									<int key="NSfFlags">16</int>
+								</object>
 							</object>
 							<object class="IBUIButton" id="396181618">
 								<reference key="NSNextResponder" ref="380575889"/>
@@ -232,7 +207,7 @@
 								<string key="NSFrame">{{36, -1}, {40, 20}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="21839038"/>
+								<reference key="NSNextKeyView" ref="64556621"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -292,14 +267,6 @@
 						<reference key="destination" ref="64556621"/>
 					</object>
 					<int key="connectionID">11</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">roomStatusLabel</string>
-						<reference key="source" ref="297589441"/>
-						<reference key="destination" ref="945254090"/>
-					</object>
-					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -374,7 +341,6 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="297589441"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="945254090"/>
 							<reference ref="396181618"/>
 							<reference ref="64556621"/>
 							<reference ref="21839038"/>
@@ -388,11 +354,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
 						<reference key="object" ref="64556621"/>
-						<reference key="parent" ref="297589441"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="945254090"/>
 						<reference key="parent" ref="297589441"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -443,7 +404,6 @@
 				<string key="4.CustomClassName">RoomCell</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
@@ -489,7 +449,6 @@
 						<string key="inviteButton">UIButton</string>
 						<string key="inviteInfoButton">UIButton</string>
 						<string key="roomNameLabel">UILabel</string>
-						<string key="roomStatusLabel">UILabel</string>
 						<string key="userListLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -511,10 +470,6 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="roomNameLabel">
 							<string key="name">roomNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="roomStatusLabel">
-							<string key="name">roomStatusLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="userListLabel">
